--- a/map.html
+++ b/map.html
@@ -15,7 +15,7 @@
 
     <main class="main-map">
         <section class="map">
-            
+            <div id="map"></div> 
         </section>
         <section class="user-locs">
             <label class="top-title">
@@ -30,5 +30,7 @@
     <script src="js/services/user.service.js"></script>
     <script src="js/services/util.service.js"></script>
     <script src="js/user-pref.js"></script>
+    <script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyApoYkVXa89Ay1pa_M1LGnddDXdBs-LCv4&callback=initMap"></script>
+    <script src="js/map-page.js"></script>
 </body>
 </html>
